--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -51,9 +51,10 @@
 }
 
 #root {
-  width: 1126px;
+  min-height: 100vh;
   max-width: 100%;
-  margin: 0 auto;
+  /*width: 1126px;
+  margin: 0 auto;*/
   text-align: center;
   border-inline: 1px solid var(--border);
   min-height: 100svh;
